--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <span id="close-login-form" class="fas fa-times"></span>
     <p><a href="Login.html"></a></p>
 
-    <!--form action="">
+    <form action="">
         <h3>user login</h3>
         <input type="email" placeholder="email" class="box">
         <input type="password" placeholder="password" class="box">
@@ -53,7 +53,7 @@
             <a href="#" class="btn"> facebook </a>
         </div>
         <p> don't have an account <a href="#">create one</a> </p>
-    </form-->
+    </form>
 
 </div>
 
@@ -342,17 +342,17 @@
     <h1 class="heading"><span>contact</span> us</h1>
 
     <div class="row">
-        <p><a href="ContactUs.html"></a></p>
+        <p><a href="ContactUs.html" target="_blank"></a></p>
 
         
-        <!--form action="" target="_blank" method="get">
+        <form action="" target="_blank" method="get">
             <h3>get in touch</h3>
             <input type="text" placeholder="your name" class="box">
             <input type="email" placeholder="your email" class="box">
             <input type="tel" placeholder="subject" class="box">
             <textarea placeholder="your message" class="box" cols="30" rows="10"></textarea>
             <input type="submit" value="send message" class="btn">
-        </form-->
+        </form>
 
     </div>
 
